--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
             let data = {email: document.getElementById("email").value, password: document.getElementById("password").value};
             console.log(data);
 
-            fetch('/api/v1/account/login', {
+            fetch('api/v1/accounts/login', {
                 method: 'POST',
                 body: JSON.stringify(data),
                 headers:{
@@ -18,8 +18,29 @@
                     return response.json();
                 })
                 .then(function(myJson) {
-                    console.log(JSON.stringify(myJson));
-
+                    console.log(JSON.stringify(myJson.result));
+                    sessionStorage.setItem("self", myJson.result);
+                    fetch('api/v1/authenticates', {
+                        method: 'POST',
+                        body: JSON.stringify(data),
+                        headers:{
+                            'Content-Type': 'application/json'
+                        }
+                    })
+                        .then(function(response) {
+                            return response.json();
+                        })
+                        .then(function(myJson) {
+                            sessionStorage.setItem("jwt", "Bearer " + myJson.result.token);
+                            var base64Url = myJson.result.token.split('.')[1];
+                            var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+                            var jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+                                return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+                            }).join(''));
+                            sessionStorage.setItem("auth", JSON.parse(jsonPayload).auth);
+                            sessionStorage.setItem("exp", JSON.parse(jsonPayload).exp);
+                            window.location.href = "/";
+                        });
                 });
         }
     </script>
@@ -45,5 +66,6 @@
     <button class="btn btn-lg btn-primary btn-block" onclick="login()">Sign in</button>
 
     <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
+    <button onclick="window.location.href='/sign'">회원가입</button>
 </div>
 </body>
