refactor: add link

--- a/src/main/resources/templates/admin-place.html
+++ b/src/main/resources/templates/admin-place.html
@@ -76,6 +76,6 @@
     <tbody id="list">
     </tbody>
 </table>
-<button onclick="window.location.href='../'">어드민으로 돌아가기</button>
+<button onclick="window.location.href='../admin'">어드민으로 돌아가기</button>
 </body>
 </html>
