--- a/src/main/resources/templates/admin-user.html
+++ b/src/main/resources/templates/admin-user.html
@@ -68,6 +68,6 @@
     <tbody id="list">
     </tbody>
 </table>
-
+<button onclick="window.location.href='../admin'">어드민으로 돌아가기</button>
 </body>
 </html>
