--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:fragment="head(title)">
     <title>Spring Security</title>
     <script>
@@ -19,7 +19,7 @@
                 })
                 .then(function(myJson) {
                     console.log(JSON.stringify(myJson.result));
-                    sessionStorage.setItem("self", myJson.result);
+                    sessionStorage.setItem("self", JSON.stringify(myJson.result).toString());
                     fetch('api/v1/authenticates', {
                         method: 'POST',
                         body: JSON.stringify(data),
