--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,9 +32,9 @@
                         })
                         .then(function(myJson) {
                             sessionStorage.setItem("jwt", "Bearer " + myJson.result.token);
-                            var base64Url = myJson.result.token.split('.')[1];
-                            var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-                            var jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+                            const base64Url = myJson.result.token.split('.')[1];
+                            const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+                            const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
                                 return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
                             }).join(''));
                             sessionStorage.setItem("auth", JSON.parse(jsonPayload).auth);
