refactor: admin to main btn add

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,5 +7,6 @@
 <body>
 <button onclick="window.location.href='admin/user'">유저 관리 페이지</button>
 <button onclick="window.location.href='admin/place'">시설 관리 페이지</button>
+<button onclick="window.location.href='/'">메인 페이지</button>
 </body>
 </html>
