fix: lazy issue

--- a/src/main/resources/templates/admin-place.html
+++ b/src/main/resources/templates/admin-place.html
@@ -45,7 +45,7 @@
         }
 
         function getAccounts() {
-            fetch('/api/v1/places/list', {
+            fetch('/api/v1/places/list/0/0', {
                 method: 'GET',
                 headers:{
                     'Content-Type': 'application/json',
