--- a/src/main/resources/templates/admin-user.html
+++ b/src/main/resources/templates/admin-user.html
@@ -77,6 +77,7 @@
     <tbody id="list">
     </tbody>
 </table>
-<button onclick="window.location.href='../admin'">어드민으로 돌아가기</button>
+<button onclick="window.location.href='/admin'">어드민으로 돌아가기</button>
+<button onclick="window.location.href='/admin/user/save'">유저 추가하기</button>
 </body>
 </html>
