--- a/src/main/resources/templates/user-save.html
+++ b/src/main/resources/templates/user-save.html
@@ -9,7 +9,6 @@
     function edit() {
         let data = {
             kind: document.getElementById("kind").value,
-            state: document.getElementById("state").value,
             email: document.getElementById("email").value,
             pw: document.getElementById("pw").value,
             nickname: document.getElementById("nickname").value,
@@ -20,8 +19,8 @@
         if (chkEmail)
             alert("중복된 이메일이 존재합니다. 다시 입력 바랍니다.");
         else {
-            fetch('/api/v1/accounts/' + document.getElementById("id").innerText, {
-                method: 'PUT',
+            fetch('/api/v1/accounts', {
+                method: 'POST',
                 body: JSON.stringify(data),
                 headers: {
                     'Content-Type': 'application/json',
@@ -60,24 +59,17 @@
 </script>
 <body>
 <div>
-    회원 아이디: <span id="id" th:text="${user.id}"></span>
-</div>
-<div>
     <label for="kind">계정 권한 종류</label>
 </div>
 <div>
-    <select id="kind" th:value="${user.kind}">
-        <option value="0" th:selected="${user.kind}">운영진</option>
-        <option value="1" th:selected="${user.kind}">일반</option>
+    <select id="kind">
+        <option value="0">운영진</option>
+        <option value="1">일반</option>
     </select>
 </div>
 <div>
-    <label for="state">상태: </label>
-    <input type="number" id="state" th:value="${user.state}">
-</div>
-<div>
     <label for="email">이메일 입력: </label>
-    <input type="email" id="email" th:value="${user.email}">
+    <input type="email" id="email">
     <button onclick="emailChecked()">이메일 중복 확인</button>
 </div>
 <div>
@@ -86,12 +78,12 @@
 </div>
 <div>
     <label for="nickname">닉네임 입력: </label>
-    <input type="text" id="nickname" th:value="${user.nickname}">
+    <input type="text" id="nickname">
 </div>
 <div>
     <label for="phoneNumber">전화번호 입력: </label>
-    <input type="tel" id="phoneNumber" th:value="${user.phoneNumber}">
+    <input type="tel" id="phoneNumber">
 </div>
-<button onclick="edit()">수정</button>
+<button onclick="edit()">추가</button>
 </body>
 </html>
