--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,28 +19,33 @@
                 })
                 .then(function(myJson) {
                     console.log(JSON.stringify(myJson.result));
-                    sessionStorage.setItem("self", JSON.stringify(myJson.result).toString());
-                    fetch('api/v1/authenticates', {
-                        method: 'POST',
-                        body: JSON.stringify(data),
-                        headers:{
-                            'Content-Type': 'application/json'
-                        }
-                    })
-                        .then(function(response) {
-                            return response.json();
+
+                    if (myJson.status !== "OK") {
+                        window.alert(myJson.result);
+                    } else {
+                        sessionStorage.setItem("self", JSON.stringify(myJson.result).toString());
+                        fetch('api/v1/authenticates', {
+                            method: 'POST',
+                            body: JSON.stringify(data),
+                            headers:{
+                                'Content-Type': 'application/json'
+                            }
                         })
-                        .then(function(myJson) {
-                            sessionStorage.setItem("jwt", "Bearer " + myJson.result.token);
-                            const base64Url = myJson.result.token.split('.')[1];
-                            const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-                            const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
-                                return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-                            }).join(''));
-                            sessionStorage.setItem("auth", JSON.parse(jsonPayload).auth);
-                            sessionStorage.setItem("exp", JSON.parse(jsonPayload).exp);
-                            window.location.href = "/";
-                        });
+                            .then(function(response) {
+                                return response.json();
+                            })
+                            .then(function(myJson) {
+                                sessionStorage.setItem("jwt", "Bearer " + myJson.result.token);
+                                const base64Url = myJson.result.token.split('.')[1];
+                                const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+                                const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+                                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+                                }).join(''));
+                                sessionStorage.setItem("auth", JSON.parse(jsonPayload).auth);
+                                sessionStorage.setItem("exp", JSON.parse(jsonPayload).exp);
+                                window.location.href = "/";
+                            });
+                    }
                 });
         }
     </script>
